--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
 		"format": "prettier --write \"./src/**/*.{ts,json,html}\""
 	},
 	"private": true,
+	"browser": {
+		"fs": false,
+		"path": false,
+		"os": false
+	},
 	"dependencies": {
 		"@angular/animations": "^15.2.0",
 		"@angular/cdk": "^15.2.1",
@@ -27,6 +32,7 @@
 		"bootstrap": "^5.3.0-alpha1",
 		"bootstrap-icons": "^1.10.3",
 		"date-fns": "^2.30.0",
+		"file-system": "^2.2.2",
 		"moment": "^2.29.4",
 		"ngx-cookie-service": "^15.0.0",
 		"primeicons": "^6.0.1",
@@ -45,6 +51,7 @@
 		"@angular/cli": "~15.2.1",
 		"@angular/compiler-cli": "^15.2.0",
 		"@types/jasmine": "~4.3.0",
+		"@types/node": "^20.4.5",
 		"@typescript-eslint/eslint-plugin": "5.48.2",
 		"@typescript-eslint/parser": "5.48.2",
 		"eslint": "^8.33.0",
